Implement FileSystem class and add Javadoc